sonar check fix